integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__cnft_get_owners_by_asset.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 1000,
  "owners": [
    {
      "id": "AqeJvcCxuAfKwyJEtF1dVWkoSCrJppf1tbqH7T9C6pcw"
    }
  ]
}
