integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__cnft_owners_table-with_different_owner_and_token_type_all.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 0,
  "limit": 5,
  "page": 1,
  "items": []
}
