integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__mint_delegate_transfer.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "77wWrvhgEkkQZQVA2hoka1JTsjG3w7BVzvcmqxDrVPWE",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "E9uEW5uMNDhLGracp5XtvarF3udV3p6hemoXfBDB82QF",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "F5iDDHxd2DVZa5eZCqE2a91QLadea4ygJwM18UUut6dj",
    "creator_hash": "EF57j46BT5Cynwija675rq59iDN1ZapYsJDnMHqta463",
    "asset_hash": "BvK9Z52tdghAc8ohBdSbeJfbfHgirzJEKkaNdexBHHQ9",
    "tree": "2AsVtpcSDi4nUhMEvtZPApGvucu6kP4qrKV6SZ9hG3WT",
    "seq": 3,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "GLUJH72y4ZoBU8qqHrQnDBtFsocF9DpeQNM1NS1q87rU",
      "share": 45,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "DjpoGceP1EJa2qEaZq8kS1GHTeDDL3AXJcSwLtrwqNj3"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": false
}
